--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
   "name": "mp-cli",
   "version": "1.0.0",
-  "description": "积理小程序-CLI",
+  "description": "小程序-CLI",
+  "configName": "mp.config.js",
   "main": "index.js",
   "bin": {
-    "mp": "./index.js"
+    "mp": "./bin/mp"
   },
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "fs": "0.0.1-security",
+    "path": "^0.12.7"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clear": "rm -rf ./dist"
   },
   "author": "",
   "license": "ISC",
