--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
+.idea/**
+*/.DS_Store
 .DS_Store
 node_modules
-/dist
-
-
-# local env files
-.env.local
-.env.*.local
 
 # Log files
 npm-debug.log*
