--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,17 @@
-.idea/**
-*/.DS_Store
+
+# OS
 .DS_Store
+*/.DS_Store
 node_modules
 
-# Log files
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
 
 # Editor directories and files
 .idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.vscode/
+.settings/
