--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
-    "inquirer": "^7.3.3",
     "fs": "0.0.1-security",
-    "path": "^0.12.7"
+    "inquirer": "^7.3.3",
+    "ora": "^5.3.0",
+    "path": "^0.12.7",
+    "readline": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
