--- a/template/src/app.json
+++ b/template/src/app.json
@@ -18,13 +18,13 @@
     "color": "#333333",
     "list": [
       {
-        "pagePath": "pages/index/index",
+        "pagePath": "pages/home/home",
         "selectedIconPath": "/images/tab/home_seled.png",
         "iconPath": "/images/tab/home.png",
         "text": "首页"
       },
       {
-        "pagePath": "pages/index/index",
+        "pagePath": "pages/personal/personal",
         "selectedIconPath": "/images/tab/personal_seled.png",
         "iconPath": "/images/tab/personal.png",
         "text": "个人中心"
