--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "mp": "./bin/mp"
   },
   "dependencies": {
+    "@moyuyc/inquirer-autocomplete-prompt": "^1.3.2",
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
     "fs": "0.0.1-security",
+    "fuzzy": "^0.1.3",
     "inquirer": "^7.3.3",
     "ora": "^5.3.0",
     "path": "^0.12.7",
