--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@moyuyc/inquirer-autocomplete-prompt": "^1.3.2",
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
+    "cross-spawn": "^7.0.3",
     "fs": "0.0.1-security",
     "fuzzy": "^0.1.3",
     "inquirer": "^7.3.3",
