--- a/package.json
+++ b/package.json
@@ -1,36 +1,42 @@
 {
-  "name": "mp-cli",
-  "version": "1.0.0",
-  "description": "一款小而美的微信小程序脚手架工具，帮助你快速开发微信小程序应用",
-  "main": "index.js",
-  "bin": {
-    "mp": "./bin/mp"
-  },
-  "dependencies": {
-    "@moyuyc/inquirer-autocomplete-prompt": "^1.3.2",
-    "chalk": "^4.1.0",
-    "commander": "^7.0.0",
-    "cross-spawn": "^7.0.3",
-    "fs": "0.0.1-security",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^7.3.3",
-    "ora": "^5.3.0",
-    "os": "^0.1.1",
-    "path": "^0.12.7",
-    "readline": "^1.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
-  },
-  "scripts": {
-    "clear": "rm -rf ./dist"
-  },
-  "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/szh0526/mp-cli.git"
-  }
+	"name": "mp-cli",
+	"version": "1.0.0",
+	"description": "一款小而美的微信小程序脚手架工具，帮助你快速开发微信小程序应用",
+	"main": "index.js",
+	"bin": {
+		"mp": "./bin/mp"
+	},
+	"dependencies": {
+		"@moyuyc/inquirer-autocomplete-prompt": "^1.3.2",
+		"chalk": "^4.1.0",
+		"commander": "^7.0.0",
+		"cross-spawn": "^7.0.3",
+		"fs": "0.0.1-security",
+		"fuzzy": "^0.1.3",
+		"inquirer": "^7.3.3",
+		"ora": "^5.3.0",
+		"os": "^0.1.1",
+		"path": "^0.12.7",
+		"readline": "^1.3.0"
+	},
+	"devDependencies": {
+		"eslint": "^6.7.2",
+		"eslint-config-airbnb-base": "^14.0.0",
+		"eslint-plugin-import": "^2.18.2"
+	},
+	"scripts": {
+		"clear": "rm -rf ./dist"
+	},
+	"author": "",
+	"license": "ISC",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/szh0526/mp-cli.git"
+	},
+	"templates": {
+		"base": {
+			"url": "https://github.com/szh0526/mp-cli-template-base.git",
+			"default": 1
+		}
+	}
 }
