--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"chalk": "^4.1.0",
 		"commander": "^7.0.0",
 		"cross-spawn": "^7.0.3",
+		"download-git-repo": "^3.0.2",
 		"fs": "0.0.1-security",
 		"fuzzy": "^0.1.3",
 		"inquirer": "^7.3.3",
@@ -35,7 +36,7 @@
 	},
 	"templates": {
 		"base": {
-			"url": "https://github.com/szh0526/mp-cli-template-base.git",
+			"url": "https://github.com/szh0526/mp-cli-template-base/#main",
 			"default": 1
 		}
 	}
