--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"description": "一款小而美的微信小程序脚手架工具，帮助你快速开发微信小程序应用",
 	"main": "index.js",
 	"bin": {
-		"mp": "./bin/mp"
+		"mp": "./bin/mp",
+		"precommit": "lint-staged"
 	},
 	"dependencies": {
 		"@moyuyc/inquirer-autocomplete-prompt": "^1.3.2",
@@ -21,9 +22,13 @@
 		"readline": "^1.3.0"
 	},
 	"devDependencies": {
+		"babel-eslint": "^10.1.0",
 		"eslint": "^6.7.2",
 		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-plugin-import": "^2.18.2"
+		"eslint-plugin-import": "^2.18.2",
+		"husky": "^6.0.0",
+		"lint-staged": "^10.5.4",
+		"prettier": "^2.2.1"
 	},
 	"scripts": {
 		"clear": "rm -rf ./dist"
@@ -33,6 +38,18 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/szh0526/mp-cli.git"
+	},
+	"husky": {
+		"hooks": {
+			"commit-msg": "git-hooks-check && eslint --ext .js,.vue src noConsole"
+		}
+	},
+	"lint-staged": {
+		"*.js": [
+			"eslint --fix --ext .js",
+			"prettier --write",
+			"git add"
+		]
 	},
 	"templates": {
 		"base": {
